--- a/app/src/main/res/drawable/envelope.xml
+++ b/app/src/main/res/drawable/envelope.xml
@@ -1,14 +1,15 @@
 <vector android:height="24dp" android:viewportHeight="31.75"
     android:viewportWidth="31.75" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillAlpha="1" android:fillColor="#D7263D"
+
+    <path android:fillAlpha="1" android:fillColor="#EEBA4C"
         android:pathData="m13.42,10.9c-0.44,0 -0.87,0.08 -1.27,0.24 -1.29,0.5 -2.2,1.86 -2.2,3.65 0,0.21 0.01,0.42 0.04,0.62l2.31,1.61c-0.52,-0.57 -0.81,-1.22 -0.81,-2.23 0,-1.33 0.52,-1.95 1.22,-2.22 0.97,-0.28 1.9,0.02 2.66,0.58l0.46,0.35 0.46,-0.34c0.98,-0.72 1.99,-0.85 2.69,-0.58 0.7,0.27 1.22,0.89 1.22,2.22 0,1.06 -0.33,1.73 -0.91,2.33L21.69,15.45c0.03,-0.21 0.04,-0.43 0.04,-0.66 0,-1.8 -0.91,-3.15 -2.2,-3.65 -1.15,-0.45 -2.49,-0.16 -3.71,0.57 -0.52,-0.32 -1.06,-0.63 -1.61,-0.74 -0.27,-0.05 -0.53,-0.08 -0.8,-0.07z"
         android:strokeAlpha="1" android:strokeColor="#00000000"
         android:strokeLineCap="butt" android:strokeLineJoin="miter" android:strokeWidth="4.83779526"/>
-    <path android:fillAlpha="1" android:fillColor="#D7263D"
+    <path android:fillAlpha="1" android:fillColor="#EEBA4C"
         android:pathData="m6.55,12.3c-0.96,0 -1.74,0.8 -1.74,1.78l0,12.74c0,0.96 0.78,1.74 1.74,1.74l18.61,0c0.97,0 1.78,-0.78 1.78,-1.74L26.94,14.08c0,-0.97 -0.8,-1.78 -1.78,-1.78l-4.17,0c0.3,0.43 0.53,0.95 0.64,1.54l2.37,0l-2.32,1.61 -0.87,0.61 -1.53,1.06c-0,0 -0,0 -0,0L15.86,19.5 12.3,17.02 9.99,15.41 7.73,13.84l2.31,0c0.12,-0.59 0.34,-1.1 0.64,-1.54zM25.4,14.74L25.4,26.17L18.53,21.82c-0.87,-0.55 -1.69,0.75 -0.82,1.3L23.88,27.02L7.82,27.02l5.95,-3.91c0.89,-0.56 0.02,-1.88 -0.85,-1.28L6.35,26.16L6.35,14.75l9.07,6.32c0.26,0.18 0.61,0.18 0.88,0z"
         android:strokeAlpha="1" android:strokeColor="#00000000"
         android:strokeLineCap="round" android:strokeLineJoin="round" android:strokeWidth="4.83779526"/>
-    <path android:fillAlpha="1" android:fillColor="#D7263D"
+    <path android:fillAlpha="1" android:fillColor="#EEBA4C"
         android:pathData="M16.26,3.21C15.41,3.08 14.51,3.52 13.93,4.51l-0,0 -0,0c-0.56,0.98 -0.47,1.94 -0.15,2.78 0.32,0.84 0.83,1.61 1.18,2.42l0.11,0.26 0.28,-0.03c0.88,-0.1 1.8,-0.04 2.7,-0.18 0.89,-0.14 1.77,-0.55 2.35,-1.53v-0l0,-0C20.95,7.24 20.88,6.24 20.35,5.57 19.86,4.95 19.03,4.68 18.11,4.73 17.69,3.91 17.03,3.33 16.26,3.21ZM16.14,3.97c0.53,0.08 1.09,0.51 1.41,1.27l0.12,0.27 0.29,-0.04c0.81,-0.11 1.46,0.16 1.79,0.58 0.34,0.42 0.42,1.02 -0.03,1.8 -0,0 0,0 0,0C19.26,8.63 18.68,8.88 17.92,9.01 17.23,9.12 16.39,9.09 15.53,9.17 15.17,8.39 14.73,7.67 14.49,7.02 14.21,6.3 14.15,5.68 14.59,4.89l0,-0c0,-0 -0,-0 0,-0 0.46,-0.78 1.02,-1 1.55,-0.92z"
         android:strokeAlpha="1" android:strokeColor="#00000000"
         android:strokeLineCap="butt" android:strokeLineJoin="miter" android:strokeWidth="0.76319999"/>
