--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#022F40</color>
+    <color name="colorPrimary">#23B5AF</color>
     <color name="colorPrimaryDark">#1A556C</color>
     <color name="colorAccent">#FF4081</color>
     <color name="second">#CB3B3B</color>
