--- a/app/src/main/res/drawable/dialog.xml
+++ b/app/src/main/res/drawable/dialog.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/back" />
+
     <item>
         <shape android:shape="rectangle">
             <gradient
-
-                android:endColor="#ccE35160"
-                android:startColor="#ccE35160"></gradient>
+                android:centerColor="#ffffff"
+                android:endColor="#ffffff"
+                android:startColor="#ffffff"></gradient>
         </shape>
     </item>
-
+    <item android:drawable="@drawable/heeret" />
 </layer-list>
