--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -19,6 +19,7 @@
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:scaleType="centerInside"
+        android:src="@drawable/heart_back"
         app:siBorderColor="#E35160"
         app:siBorderWidth="0dp" />
 
@@ -35,6 +36,5 @@
         android:layout_gravity="center"
         android:padding="20dp"
         android:textAlignment="center"
-        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#fff" />
 </FrameLayout>
